# azure_tts

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
azure_tts/: all.html  enum.AudioFormat.html  enum.EnUsVoices.html  enum.Region.html  enum.SilenceAttributeType.html  enum.Style.html  enum.TtsError.html  enum.VoiceGender.html  enum.VoiceSegment.html  index.html  sidebar-items.js  struct.Speak.html  struct.VoiceDescription.html  struct.VoiceService.html  struct.VoiceSettings.html
azure_tts/error/: enum.TtsError.html
azure_tts/ssml_serializer/: enum.VoiceSegment.html  struct.Speak.html
azure_tts/types/: enum.AudioFormat.html  enum.EnUsVoices.html  enum.Region.html  enum.SilenceAttributeType.html  enum.Style.html  enum.VoiceGender.html  struct.VoiceDescription.html  struct.VoiceSettings.html
examples/: list_voices_us.rs  raw_synthesize.rs  simple_synthesize.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
src/: error.rs  lib.rs  ssml_serializer.rs  types.rs
src/azure_tts/: error.rs.html  lib.rs.html  ssml_serializer.rs.html  types.rs.html
(+2 files in other folders)
