[package]
name = "azure_tts"
version = "0.1.0"
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"
quick-xml = { red = "d8727717fb062a2b2d31ce748959220a28da9f32", features = ["serialize"], git = "https://github.com/tafia/quick-xml" }
# quick-xml = { version = "0.22", features = ["serialize"] }
thiserror = "1.0"

[dev-dependencies]
mockito = "0.30"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
